<resources>
    <string name="app_name">Sample FB Login</string>
    <string name="facebook_app_id">988851221223354</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_facebook">Sign in with \nFacebook</string>
    <string name="sign_in_with_google">Sign in with \nGoogle</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_cell_phone_number">Cell Phone Number</string>
    <string name="sign_up_submit">Submit</string>
    <string name="hint_mobile_no">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_re_password">Re-type Password</string>

    <string name="title_activity_splash_screen">SampleApp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pref_name">SignInPrefs</string>
    <string name="pref_user_name">UserName</string>
    <string name="pref_user_email">UserEmail</string>
    <string name="pref_user_mobile">UserMobile</string>
</resources>
