<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            android:layout_gravity="start"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextLabel">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/sign_up_edit_text_min_height"
                    android:hint="@string/hint_first_name"
                    android:textSize="@dimen/button_text_size"
                    android:background="@drawable/bg_sign_up_edit_text"
                    android:padding="5dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_gap"
                app:hintTextAppearance="@style/TextLabel">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/sign_up_edit_text_min_height"
                    android:hint="@string/hint_last_name"
                    android:textSize="@dimen/button_text_size"
                    android:background="@drawable/bg_sign_up_edit_text"
                    android:padding="5dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_gap"
                app:hintTextAppearance="@style/TextLabel">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/sign_up_edit_text_min_height"
                    android:hint="@string/hint_cell_phone_number"
                    android:textSize="@dimen/button_text_size"
                    android:background="@drawable/bg_sign_up_edit_text"
                    android:padding="5dp"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up_submit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"
                android:background="@drawable/bg_sign_up_submit"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/button_dialog_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_dialog"
        android:layout_gravity="top|end"/>

</FrameLayout>