<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:background="@color/main_activity_bg_color"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/sign_in_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_margin_top"
        android:weightSum="2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/sign_in_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_mobile_no"
            android:textColor="@android:color/white"
            android:padding="@dimen/edit_text_padding"
            android:maxLength="@integer/mobile_no_max_length"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:textColorHint="@android:color/white"/>

        <EditText
            android:id="@+id/sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_password"
            android:textColor="@android:color/white"
            android:padding="@dimen/edit_text_padding"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:textColorHint="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_group"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/sign_in_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/button_min_height"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sign_up_hint_text_size"
            android:layout_marginTop="@dimen/button_margin_top"
            android:textAllCaps="false"
            android:background="@color/submit_button_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="@dimen/button_margin_top">

            <LinearLayout
                android:id="@+id/sign_in_facebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="start"
                android:background="@color/facebook_button_color"
                android:gravity="center"
                android:padding="@dimen/edit_text_padding"
                android:layout_marginEnd="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_facebook"
                    android:gravity="center"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_in_google"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:background="@color/google_button_color"
                android:gravity="center"
                android:padding="@dimen/edit_text_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_with_google"
                    android:textColor="@android:color/white"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>